--- a/PathFindingVisualizer/src/app/path-finder/overview/overview.component.html
+++ b/PathFindingVisualizer/src/app/path-finder/overview/overview.component.html
@@ -1,1 +1,10 @@
-<p>overview works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+      <app-graph-overview></app-graph-overview>
+    </div>
+    <div class="col-6">
+      <app-astar-overview></app-astar-overview>
+    </div>
+  </div>
+</div>
