--- a/PathFindingVisualizer/src/app/path-finder/presentation/graph-controls/graph-controls.component.html
+++ b/PathFindingVisualizer/src/app/path-finder/presentation/graph-controls/graph-controls.component.html
@@ -1,3 +1,3 @@
-<button type="button" class="btn btn-success">Set start</button>
-<button type="button" class="btn btn-secondary">Add/Remove walls</button>
-<button type="button" class="btn btn-primary">Set end</button>
+<button type="button" class="btn btn-success" (click)="setStart()">Set start</button>
+<button type="button" class="btn btn-secondary" (click)="modifyWalls()">Add/Remove walls</button>
+<button type="button" class="btn btn-primary" (click)="setEnd()">Set end</button>
