--- a/PathFindingVisualizer/src/app/path-finder/presentation/astar-controls/astar-controls.component.html
+++ b/PathFindingVisualizer/src/app/path-finder/presentation/astar-controls/astar-controls.component.html
@@ -1,3 +1,3 @@
-<button type="button" class="btn btn-success" disabled="{{graph === undefined}}" (click)="run()">Run</button>
+<button type="button" class="btn btn-success" (click)="run()">Run</button>
 <button type="button" class="btn btn-danger" (click)="stop()">Stop</button>
 <button type="button" class="btn btn-info" (click)="reset()">Reset</button>
