add button to remove all walls at once

--- a/PathFindingVisualizer/src/app/path-finder/presentation/graph-controls/graph-controls.component.html
+++ b/PathFindingVisualizer/src/app/path-finder/presentation/graph-controls/graph-controls.component.html
@@ -1,3 +1,4 @@
 <button type="button" class="btn btn-success" (click)="setStart()">Set start</button>
 <button type="button" class="btn btn-secondary" (click)="modifyWalls()">Add/Remove walls</button>
+<button type="button" class="btn btn-secondary" (click)="clearWalls()">Remove all walls</button>
 <button type="button" class="btn btn-primary" (click)="setEnd()">Set end</button>
