--- a/PathFindingVisualizer/src/app/path-finder/presentation/astar-overview/astar-overview.component.html
+++ b/PathFindingVisualizer/src/app/path-finder/presentation/astar-overview/astar-overview.component.html
@@ -1,3 +1,5 @@
-<app-astar-info></app-astar-info>
-<app-astar-speed></app-astar-speed>
-<app-astar-controls></app-astar-controls>
+<div class="a-start-controls">
+    <app-astar-info></app-astar-info>
+    <app-astar-speed></app-astar-speed>
+    <app-astar-controls></app-astar-controls>
+</div>
