--- a/PathFindingVisualizer/src/app/path-finder/presentation/graph-controls/graph-controls.component.html
+++ b/PathFindingVisualizer/src/app/path-finder/presentation/graph-controls/graph-controls.component.html
@@ -1,4 +1,6 @@
-<button type="button" class="btn btn-success" (click)="setStart()">Set start</button>
-<button type="button" class="btn btn-secondary" (click)="modifyWalls()">Add/Remove walls</button>
-<button type="button" class="btn btn-secondary" (click)="clearWalls()">Remove all walls</button>
-<button type="button" class="btn btn-primary" (click)="setEnd()">Set end</button>
+<div class="btn-group" role="group">
+    <button type="button" class="btn btn-success small-margin-right" (click)="setStart()">Set start</button>
+    <button type="button" class="btn btn-secondary small-margin-sides" (click)="modifyWalls()">Add/Remove walls</button>
+    <button type="button" class="btn btn-secondary small-margin-sides" (click)="clearWalls()">Remove all walls</button>
+    <button type="button" class="btn btn-primary small-margin-left" (click)="setEnd()">Set end</button>
+</div>
