--- a/PathFindingVisualizer/src/app/path-finder/presentation/graph-overview/graph-overview.component.html
+++ b/PathFindingVisualizer/src/app/path-finder/presentation/graph-overview/graph-overview.component.html
@@ -1,2 +1,4 @@
-<app-graph-controls></app-graph-controls>
-<app-graph-view></app-graph-view>
+<div class="graph-overview">
+    <app-graph-controls></app-graph-controls>
+    <app-graph-view></app-graph-view>
+</div>
