--- a/PathFindingVisualizer/src/app/app.component.html
+++ b/PathFindingVisualizer/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-overview></app-overview>
+<div class="container">
+    <div class="row">
+        <div class="col-9">
+            <app-graph-overview></app-graph-overview>
+        </div>
+        <div class="col-3">
+            <app-algorithm-overview></app-algorithm-overview>
+        </div>
+    </div>
+</div>
