--- a/PathFindingVisualizer/src/styles.scss
+++ b/PathFindingVisualizer/src/styles.scss
@@ -1,6 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.css";
+@import '~bootstrap/dist/css/bootstrap.css';
 
 button {
   margin: 10px;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+  background-color: rgb(167, 181, 170);
 }
