--- a/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-overview/algorithm-overview.component.scss
+++ b/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-overview/algorithm-overview.component.scss
@@ -4,4 +4,8 @@ div.a-start-controls {
     flex-wrap: nowrap;
     display: flex;
     align-items: center;
+
+    div {
+        padding-top: 5vh;
+    }
 }
