--- a/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-speed/algorithm-speed.component.html
+++ b/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-speed/algorithm-speed.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="initialSpeed !== -1" class="form-group">
-  <label for="formControlRange">Algorithm execution speed</label>
+  <label for="formControlRange">Speed</label>
   <input type="range" class="form-control-range" min="{{min}}" max="{{max}}" step="{{stepSize}}"
     value="{{initialSpeed}}" (change)="valueChanged($event)" id="formControlRange">
 </div>
