--- a/PathFindingVisualizer/src/app/app.component.html
+++ b/PathFindingVisualizer/src/app/app.component.html
@@ -1,4 +1,13 @@
-<div class="container">
+<mat-toolbar color="primary">
+    Algorithm Path Visualizer
+    <div class="flex-stretch"></div>
+    <mat-slide-toggle [formControl]="toggleControl" class="mr-8">
+    </mat-slide-toggle>
+    <mat-icon>bedtime</mat-icon>
+</mat-toolbar>
+
+<div class="content mat-app-background" fxLayout="row" fxLayout.xs="column" fxLayoutGap="16px">
+
     <div class="row">
         <div class="col-9">
             <app-graph-overview></app-graph-overview>
