--- a/PathFindingVisualizer/src/app/app.component.scss
+++ b/PathFindingVisualizer/src/app/app.component.scss
@@ -9,6 +9,19 @@
     margin-left: 2px;
 }
 
-div.container {
-    margin-top: 10vh;
+mat-toolbar {
+    display: flex;
+    align-items: center;
+    min-height: 10vh;
+    max-height: 10vh;
+}
+
+.flex-stretch {
+    flex: 1 0 auto;
+}
+
+.content {
+    padding: 16px;
+    min-height: 90vh;
+    max-height: 90vh;
 }
