--- a/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-speed/algorithm-speed.component.html
+++ b/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-speed/algorithm-speed.component.html
@@ -1,6 +1,10 @@
 <div *ngIf="initialSpeed !== -1" class="form-group">
-  <mat-slider thumbLabel [displayWith]="formatLabel" [value]="initialSpeed" [step]="stepSize" [min]="min" [max]="max"
-    (change)="valueChanged($event)">
-  </mat-slider>
-  <span>Execution Speed</span>
+  <div class="row">
+    <mat-slider thumbLabel [displayWith]="formatLabel" vertical="true" [value]="initialSpeed" [step]="stepSize"
+      [min]="min" [max]="max" (change)="valueChanged($event)">
+    </mat-slider>
+  </div>
+  <div class="row">
+    <span>Execution Speed</span>
+  </div>
 </div>
