--- a/PathFindingVisualizer/src/styles.scss
+++ b/PathFindingVisualizer/src/styles.scss
@@ -12,5 +12,39 @@ body {
 body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
-  background-color: rgb(167, 181, 170);
+}
+
+@import '~@angular/material/theming';
+
+@include mat-core();
+
+$app-primary: mat-palette($mat-teal);
+$app-accent: mat-palette($mat-amber, A200, A100, A400);
+
+$app-warn: mat-palette($mat-red);
+
+$app-default-theme: mat-light-theme(
+  (
+    color: (
+      primary: $app-primary,
+      accent: $app-accent,
+      warn: $app-warn,
+    ),
+  )
+);
+
+$app-theme: mat-dark-theme(
+  (
+    color: (
+      primary: $app-primary,
+      accent: $app-accent,
+      warn: $app-warn,
+    ),
+  )
+);
+
+@include angular-material-theme($app-default-theme);
+
+.darkmode {
+  @include angular-material-color($app-theme);
 }
