--- a/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-overview/algorithm-overview.component.scss
+++ b/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-overview/algorithm-overview.component.scss
@@ -1,5 +1,5 @@
 div.a-start-controls {
-    padding-top: 10vh;
+    padding-bottom: 70px;
     flex-direction: column;
     flex-wrap: nowrap;
     display: flex;
