--- a/PathFindingVisualizer/src/app/app.component.html
+++ b/PathFindingVisualizer/src/app/app.component.html
@@ -8,12 +8,8 @@
 
 <div class="content mat-app-background" fxLayout="row" fxLayout.xs="column" fxLayoutGap="16px">
 
-    <div class="row">
-        <div class="col-9">
-            <app-graph-overview></app-graph-overview>
-        </div>
-        <div class="col-3">
-            <app-algorithm-overview></app-algorithm-overview>
-        </div>
+    <div class="container">
+        <app-graph-overview></app-graph-overview>
+        <app-algorithm-overview></app-algorithm-overview>
     </div>
 </div>
