add some kind of minimal algorithm description

--- a/PathFindingVisualizer/src/app/app.component.scss
+++ b/PathFindingVisualizer/src/app/app.component.scss
@@ -29,5 +29,6 @@ mat-toolbar {
 .container {
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
+    flex-wrap: wrap;
+    justify-content: center;
 }
