--- a/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-info/algorithm-info.component.scss
+++ b/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-info/algorithm-info.component.scss
@@ -4,6 +4,7 @@ span {
     min-height: 10vh;
     max-height: 10vh;
     min-width: 15vw;
+    max-width: 15vw;
     overflow: auto;
 
     margin: 5px;
