--- a/PathFindingVisualizer/src/styles.scss
+++ b/PathFindingVisualizer/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~bootstrap/dist/css/bootstrap.css';
+@import '~bootstrap/scss/bootstrap';
+@import '~ngx-toastr/toastr-bs4-alert';
 
 button {
   margin: 10px;
