--- a/PathFindingVisualizer/src/app/app.component.scss
+++ b/PathFindingVisualizer/src/app/app.component.scss
@@ -11,7 +11,6 @@
 
 mat-toolbar {
     display: flex;
-    align-items: center;
     min-height: 10vh;
     max-height: 10vh;
 }
@@ -30,5 +29,5 @@ mat-toolbar {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: baseline;
 }
