--- a/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-overview/algorithm-overview.component.scss
+++ b/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-overview/algorithm-overview.component.scss
@@ -1,11 +1,8 @@
 div.a-start-controls {
-    padding-bottom: 70px;
     flex-direction: column;
     flex-wrap: nowrap;
     display: flex;
     align-items: center;
 
-    div {
-        padding-top: 5vh;
-    }
+    margin-top: 90px;
 }
