--- a/PathFindingVisualizer/src/app/app.component.html
+++ b/PathFindingVisualizer/src/app/app.component.html
@@ -11,5 +11,6 @@
     <div class="container">
         <app-graph-overview></app-graph-overview>
         <app-algorithm-overview></app-algorithm-overview>
+        <app-algorithm-info></app-algorithm-info>
     </div>
 </div>
