set algorithm states form local storage

--- a/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-selection/algorithm-selection.component.html
+++ b/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-selection/algorithm-selection.component.html
@@ -1,6 +1,6 @@
 <mat-form-field appearance="fill">
     <mat-label>Choose an algorithm</mat-label>
-    <mat-select (selectionChange)="selectedOption($event)">
+    <mat-select [(value)]="currentValue" (selectionChange)="selectedOption($event)">
         <mat-option *ngFor="let algorithm of algorithms" [value]="algorithm">
             {{algorithm}}
         </mat-option>
