settings color picker (to be continued) fucking materials

--- a/PathFindingVisualizer/src/app/modals/modal-settings/modal-settings.component.html
+++ b/PathFindingVisualizer/src/app/modals/modal-settings/modal-settings.component.html
@@ -1,1 +1,15 @@
-<h1 mat-dialog-title>Hi {{data}}</h1>
+<h1 mat-dialog-title>Settings</h1>
+<h2 mat-dialog-content>Change colors of the graph</h2>
+<ng-container *ngFor="let colorField of modiefieableColors">
+    <mat-form-field class="color-form-field" appearance="standard"
+        [color]="modifieableSettings.colorSettings[colorField]">
+        <mat-label>{{fieldNameToLabelMap[colorField]}}</mat-label>
+        <input matInput [ngxMatColorPicker]="picker" [formControl]="colorCtr">
+        <ngx-mat-color-toggle matSuffix [for]="picker"></ngx-mat-color-toggle>
+        <ngx-mat-color-picker #picker [color]="color"></ngx-mat-color-picker>
+    </mat-form-field>
+</ng-container>
+<div mat-dialog-actions>
+    <button class="btn btn-danger" [mat-dialog-close]="undefined">Close</button>
+    <button class="btn btn-success" [mat-dialog-close]="modifieableSettings" cdkFocusInitial>Save</button>
+</div>
