--- a/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-info/algorithm-info.component.scss
+++ b/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-info/algorithm-info.component.scss
@@ -1,6 +1,6 @@
 div {
-    width: 25vw;
-    padding: 10px;
+    width: 20vw;
+    padding: 0px 20px;
     overflow: auto;
     margin-top: 90px;
 }
