--- a/PathFindingVisualizer/src/app/app.component.html
+++ b/PathFindingVisualizer/src/app/app.component.html
@@ -7,8 +7,8 @@
     <mat-icon>bedtime</mat-icon>
 </mat-toolbar>
 
-<div class="content mat-app-background" fxLayout="row" fxLayout.xs="column" fxLayoutGap="16px">
-    <div class="container">
+<div class="mat-app-background content">
+    <div class="overview-container">
         <app-graph-overview></app-graph-overview>
         <app-algorithm-overview></app-algorithm-overview>
         <app-algorithm-info></app-algorithm-info>
