--- a/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-info/algorithm-info.component.scss
+++ b/PathFindingVisualizer/src/app/modules/algorithm/presentation/algorithm-info/algorithm-info.component.scss
@@ -1,6 +1,6 @@
 div {
-    width: 20vw;
+    width: 30vw;
     padding: 0px 20px;
-    overflow: auto;
+    overflow-y: auto;
     margin-top: 90px;
 }
