refactored lock of settings in toolbar

--- a/PathFindingVisualizer/src/app/app.component.html
+++ b/PathFindingVisualizer/src/app/app.component.html
@@ -1,10 +1,11 @@
 <mat-toolbar color="primary">
     Algorithm Path Visualizer
     <div class="flex-stretch"></div>
-    <mat-icon (click)="openSettingsModal()">settings</mat-icon>
+    <mat-icon>flare</mat-icon>
     <mat-slide-toggle [formControl]="toggleControl" class="mr-8">
     </mat-slide-toggle>
     <mat-icon>bedtime</mat-icon>
+    <mat-icon (click)="openSettingsModal()">settings</mat-icon>
 </mat-toolbar>
 
 <div class="mat-app-background content">
