refactored lock of toolbar

--- a/PathFindingVisualizer/src/app/app.component.html
+++ b/PathFindingVisualizer/src/app/app.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary">
-    Algorithm Path Visualizer
+    <div class="flex-stretch"></div>
+    <span>Algorithm Path Visualizer</span>
     <div class="flex-stretch"></div>
     <mat-icon>flare</mat-icon>
     <mat-slide-toggle [formControl]="toggleControl" class="mr-8">
