--- a/PathFindingVisualizer/src/app/app.component.scss
+++ b/PathFindingVisualizer/src/app/app.component.scss
@@ -10,9 +10,8 @@
 }
 
 mat-toolbar {
-    display: flex;
-    min-height: 10vh;
-    max-height: 10vh;
+    min-height: 80px;
+    max-height: 80px;
 
     mat-icon {
         margin: 0 10px 0 10px;
@@ -21,6 +20,12 @@ mat-toolbar {
         margin-left: -5px;
         margin-right: -5px;
     }
+
+    span {
+        font-size: 1.5em;
+        font-weight: bolder;
+    }
+
     .flex-stretch {
         flex: 1 0 auto;
     }
