allow resizeable grid (to be continued)

--- a/PathFindingVisualizer/src/app/modules/path-finder/presentation/graph-controls/graph-controls.component.scss
+++ b/PathFindingVisualizer/src/app/modules/path-finder/presentation/graph-controls/graph-controls.component.scss
@@ -1,1 +1,5 @@
-@import '../../../../app.component.scss';
+@import "../../../../app.component.scss";
+
+.graph-grid-size {
+    padding-left: 25px;
+}
