--- a/PathFindingVisualizer/src/app/modules/path-finder/presentation/graph-controls/graph-controls.component.html
+++ b/PathFindingVisualizer/src/app/modules/path-finder/presentation/graph-controls/graph-controls.component.html
@@ -1,6 +1,13 @@
-<div class="btn-group" role="group">
-    <button type="button" class="btn btn-success small-margin-right" (click)="setStart()">Set start</button>
-    <button type="button" class="btn btn-secondary small-margin-sides" (click)="modifyWalls()">Add/Remove walls</button>
-    <button type="button" class="btn btn-secondary small-margin-sides" (click)="clearWalls()">Remove all walls</button>
-    <button type="button" class="btn btn-primary small-margin-left" (click)="setEnd()">Set end</button>
+<div>
+    <div class="btn-group" role="group">
+        <button type="button" class="btn btn-success small-margin-right" (click)="setStart()">Set start</button>
+        <button type="button" class="btn btn-secondary small-margin-sides" (click)="modifyWalls()">Add/Remove
+            walls</button>
+        <button type="button" class="btn btn-secondary small-margin-sides" (click)="clearWalls()">Remove all
+            walls</button>
+        <button type="button" class="btn btn-primary small-margin-left" (click)="setEnd()">Set end</button>
+    </div>
+    <div class="graph-grid-size">
+        <app-graph-grid-size></app-graph-grid-size>
+    </div>
 </div>
