refactored styling of grid size

--- a/PathFindingVisualizer/src/app/modules/path-finder/presentation/graph-controls/graph-controls.component.html
+++ b/PathFindingVisualizer/src/app/modules/path-finder/presentation/graph-controls/graph-controls.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
     <div class="btn-group" role="group">
         <button type="button" class="btn btn-success small-margin-right" (click)="setStart()">Set start</button>
         <button type="button" class="btn btn-secondary small-margin-sides" (click)="modifyWalls()">Add/Remove
@@ -7,7 +7,5 @@
             walls</button>
         <button type="button" class="btn btn-primary small-margin-left" (click)="setEnd()">Set end</button>
     </div>
-    <div class="graph-grid-size">
-        <app-graph-grid-size></app-graph-grid-size>
-    </div>
+    <app-graph-grid-size></app-graph-grid-size>
 </div>
