--- a/PathFindingVisualizer/src/app/modules/path-finder/presentation/graph-controls/graph-controls.component.scss
+++ b/PathFindingVisualizer/src/app/modules/path-finder/presentation/graph-controls/graph-controls.component.scss
@@ -1,5 +1,8 @@
 @import "../../../../app.component.scss";
 
-.graph-grid-size {
-    padding-left: 25px;
+.container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
 }
