--- a/PathFindingVisualizer/src/app/modals/modal-settings/modal-settings.component.scss
+++ b/PathFindingVisualizer/src/app/modals/modal-settings/modal-settings.component.scss
@@ -7,22 +7,26 @@ h2 {
 }
 .one-color-setting {
     label {
-        width: 250px;
+        display: inline-block;
+        min-width: 250px;
+        max-width: 250px;
     }
 
     .color-input-field {
-        width: 70px;
+        display: inline-block;
+        max-width: 100px;
+        min-width: 100px;
     }
 
     .color-box {
+        display: inline-block;
         min-width: 20px;
         max-width: 20px;
         min-height: 20px;
         max-height: 20px;
-        display: block;
     }
 }
 
 .buttons-end {
-    margin-top: 20px;
+    padding-top: 20px;
 }
