--- a/PathFindingVisualizer/src/app/modules/algorithm/components/algorithm-controls/algorithm-controls.component.html
+++ b/PathFindingVisualizer/src/app/modules/algorithm/components/algorithm-controls/algorithm-controls.component.html
@@ -1,8 +1,6 @@
-<div class="btn-group" role="group">
-    <button type="button" class="btn btn-success small-margin-right" [disabled]="allDisabled"
-        (click)="run()">Run</button>
-    <button type="button" class="btn btn-danger small-margin-sides" [disabled]="allDisabled"
-        (click)="stop()">Stop</button>
-    <button type="button" class="btn btn-info small-margin-left" [disabled]="allDisabled"
-        (click)="reset()">Reset</button>
+<div class="btn-group-vertical" role="group">
+    <button type="button" class="btn btn-success  btn-block" [disabled]="isRunEnabled()" (click)="run()">{{
+        stopped && !done ? 'Continue' : 'Start'}}</button>
+    <button type="button" class="btn btn-danger  btn-block" [disabled]="isStopEnabled()" (click)="stop()">Pause</button>
+    <button type="button" class="btn btn-info  btn-block" [disabled]="isResetEnabled()" (click)="reset()">Reset</button>
 </div>
