disable grid size if another button already enabled

--- a/PathFindingVisualizer/src/app/modules/path-finder/presentation/graph-grid-size/graph-grid-size.component.html
+++ b/PathFindingVisualizer/src/app/modules/path-finder/presentation/graph-grid-size/graph-grid-size.component.html
@@ -3,7 +3,7 @@
         <span class="description">Grid Size</span>
         <span class="left-label">small</span>
         <input type="range" min="{{min}}" max="{{max}}" step="{{stepSize}}" value="{{initialGridSize}}"
-            (change)="valueChanged($event)" />
+            (change)="valueChanged($event)" [disabled]="disabled" />
         <span class="right-label">BIG</span>
     </ng-container>
 </div>
